Updated schemas to incorporate changes from 2.14.10; started updating parsing examples with validation logic
