# python/api/convert_835.py
@@ -18,7 +18,8 @@ https://datainsight.health/docs/schemas/835/
 # ** 835
 # Convert multiple 835 files using multi-part request
 edi_835_dir = '../../edi_files/835'
-file_names_to_convert = ['claim_adj_reason.dat', '835-all-fields.dat', '835-provider-level-adjustment.dat']
+# file_names_to_convert = ['claim_adj_reason.dat', '835-all-fields.dat', '835-provider-level-adjustment.dat', '835-validation.dat']
+file_names_to_convert = ['835-validation-issues.dat']
 files_to_convert = [edi_835_dir + '/' + file_name for file_name in file_names_to_convert]
 print('** Converting files:')
 print(*files_to_convert)
@@ -26,10 +27,10 @@ response = edi_converter.convert_files_with_multipart(files_to_convert, True)
 cur_transaction_id = None
 for response_line_str in response.iter_lines():
     # each line is an object
-    # Object types: PAYMENT (paid claim), PROVIDER_ADJUSTMENT (provider-level adjustment), WARNING (parser's warning)
+    # Object types: PAYMENT (paid claim), PROVIDER_ADJUSTMENT (provider-level adjustment), VALIDATION (EDI Validation issue)
     obj = json.loads(response_line_str)
     object_type = ObjectType(obj['objectType'])
-    if object_type in {ObjectType.ERROR, ObjectType.WARNING}:
+    if object_type in {ObjectType.ERROR, ObjectType.VALIDATION}:
         edi_converter.handle_warning_error(obj)
         continue
     if object_type == ObjectType.PAYMENT:
